--- a/interface/templates/mysite/home.html
+++ b/interface/templates/mysite/home.html
@@ -15,14 +15,25 @@
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+<style type="text/css">
+    .btn-info{
+        FONT-VARIANT: JIS04;
+    color: #0e0303;
+    background-color: #67787d;
+    border-color: #2a464e;
+    right: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
+</style>
 </head>
 <body>
 <header></header>
 <main>
 
     <div>
-        <a href="{% url 'interface:show_upload_files' %}">showfiles</a>
 
     </div>
     <div class="container">
@@ -33,11 +44,12 @@
                 <input type="file" id="exampleInputFile" name="file">
                 <p class="help-block"> Select the file you wish to share </p>
             </div>
-            <button type="submit" class="btn btn-default"><a href="{% url 'interface:upload_file' %}"></a>Upload
+            <button type="submit" class="btn btn-default">Upload
             </button>
         </form>
         <p class="error">{{error_file}}</p>
     </div>
+        <a href="{% url 'interface:show_upload_files' %}">Showfiles</a>
 
 </main>
 <footer></footer>
