--- a/interface/templates/mysite/upload_file.html
+++ b/interface/templates/mysite/upload_file.html
@@ -16,10 +16,10 @@
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+
 </head>
 <body>
-<a href="/">home</a>
+<a href="/">Home</a>
 <div class="col-md-12 space">
     <p>Download files</p>
 
